modified unnecessary gap appears in smartphone due to style of comment (refs issue#6)

--- a/web/css/timeline-smartphone.css
+++ b/web/css/timeline-smartphone.css
@@ -40,7 +40,7 @@
 
 .timeline-post-control {
   display: block;
-  width: 280px;
+  width: 255px;
   margin-left: 25px;
   padding: 0 5px;
   font-size: 12px;
